refactor: use Stream#toList instead of Collectors.toList